# tgdoc

./: .gitignore  Cargo.toml  README.md  justfile  sources.toml
.github/workflows/: release.yml
src/: anchor_index.rs  config.rs  convert.rs  fetch.rs  main.rs  pages.rs
src/driver/: git.rs  http.rs  mod.rs
src/source/: mod.rs  ptb.rs  tg_bot_api.rs
