[package]
name = "tgdoc"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "tgdoc"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["gzip", "rustls-tls"] }
scraper = "0.22"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
regex = "1"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
